--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "dagre": "^0.7.4",
     "konva": "^1.6.3",
-    "vue": "^2.3.3"
+    "vue": "^2.3.3",
+    "vue-codemirror": "^3.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
