--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "dagre": "^0.7.4",
-    "konva": "^1.6.3",
+    "ha-chart": "0.0.1",
     "vue": "^2.3.3",
     "vue-codemirror": "^3.0.8"
   },
